<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleLanguage">Language :</string>
    <string name="titleCountry">Country :</string>
    <string name="titleGenre">Genre :</string>
    <string name="titleDirector">Director :</string>
    <string name="titleWriter">Writer :</string>
    <string name="actors">Actors :</string>
    <string name="awards">Awards :</string>
    <string name="plot">Plot</string>
</resources>