<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <data>-->
<!--        <variable-->
<!--            name="movie"-->
<!--            type="com.shahin.movieapp.viewModel.MainViewModel" />-->
<!--    </data>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.DetailMovieFragment"
            android:id="@+id/constraintL_detail_root">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/rl_big_pic_detail_movie">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:alpha="0.3"
                    android:id="@+id/iv_pic_detail_movie"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_play_movie"
                    android:layout_centerInParent="true"
                    android:id="@+id/iv_show_film_detail_movie"/>

            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/iv_small_pic_detail_movie"
                app:layout_constraintTop_toBottomOf="@+id/rl_big_pic_detail_movie">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_detail_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="film batman"
                    android:textSize="16sp"
                    android:padding="2dp"
                    android:gravity="center"
                    android:lines="2"
                    android:background="@drawable/background_title"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_time_detail_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/back_gray"
                        android:padding="7dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:text="51 min" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_year_detail_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="2019"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/back_yellow"
                        android:padding="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="IMDB "
                        android:textColor="@android:color/black"
                        android:textSize="14sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_imdb_rate_detail_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9.3"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_metascore_detail_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:text="78%" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/tv_like_detail_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_like" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_small_pic_detail_movie"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat2"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:padding="3dp"
                        android:text="@string/titleGenre"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_genre_detail_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="genre"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:padding="3dp"
                        android:text="@string/titleCountry"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_country_detail_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="country"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:padding="3dp"
                        android:text="@string/titleLanguage"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_language_detail_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="lan"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="8dp">

                <androidx.appcompat.widget.AppCompatTextView style="@style/titles" android:text="@string/plot"/>

                <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_plot_detail_movie" style="@style/texts" android:text="plot"/>

                <androidx.appcompat.widget.AppCompatTextView style="@style/titles" android:text="@string/titleDirector"/>

                <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_director_detail_movie" android:text="Alex " style="@style/texts"/>

                <androidx.appcompat.widget.AppCompatTextView style="@style/titles" android:text="@string/titleWriter"/>

                <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_writer_detail_movie" style="@style/texts" android:text="Alex " />

                <androidx.appcompat.widget.AppCompatTextView android:text="@string/actors" style="@style/titles"/>

                <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_actors_detail_movie" android:text="Alex " style="@style/texts"/>

                <androidx.appcompat.widget.AppCompatTextView android:text="@string/awards" style="@style/titles"/>

                <androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_award_detail_movie" android:text="award" style="@style/texts"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_banner_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>